fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ body {
   max-width: 320px;         /* keeps name from stretching */
   text-align: center;
   justify-self: center;
-  margin-right: 100px; ;
+  margin-right: 100px; 
 }
 
 .header-text h1 {
@@ -315,6 +315,7 @@ body {
   margin: 0 auto;
   padding: 0 10px;
   white-space: normal;
+   margin-right: 100px; 
 }
 
 .header-text p {
